# ZLaunchArgs

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  app.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: apps.rs  config.rs  launch.rs  mod.rs  process.rs  scanner.rs
src-tauri/src/models/: app.rs
src/components/env/: EnvVariables.tsx
src/components/history/: LaunchHistory.tsx
src/components/launch/: BatchLaunchButton.tsx  LaunchButton.tsx  LaunchPreview.tsx
src/components/layout/: CenterPanel.tsx  RightPanel.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.tsx
src/components/monitor/: ProcessMonitor.tsx
src/components/profiles/: ArgSection.tsx  ArgToggleRow.tsx  ProfilePanel.tsx  ProfileSelector.tsx
src/components/settings/: ImportExport.tsx
src/components/shared/: ConfirmDialog.tsx  EmptyState.tsx  ErrorBoundary.tsx  Modal.tsx  TagBadge.tsx  Toast.tsx
src/components/stats/: AppStats.tsx
src/hooks/: useAutoBackup.ts  useLaunch.ts  useNotifications.ts  useProcessMonitor.ts  useTheme.ts
src/pages/: LibraryPage.tsx  SettingsPage.tsx
src/services/: presets.ts  tauriCommands.ts
src/stores/: appStore.ts  processStore.ts  uiStore.ts
src/types/: index.ts
